svc2/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress-2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: backend-2-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: fr.poridhi.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-sv2-svc
                port:
                  number: 80
